# agent

./: CHANGELOG.md  Makefile  README.md  agent.example.toml  dooservice-agent.spec  install.sh  pyproject.toml
.github/workflows/: release.yml
src/dooservice_agent/: __init__.py  __main__.py  config.py
src/dooservice_agent/cli/: __init__.py  context.py  errors.py  output.py
src/dooservice_agent/cli/commands/: __init__.py  bootstrap.py  pg.py  pgdog.py  proxy.py  serve.py  systemd.py
src/dooservice_agent/daemon/: __init__.py  scheduler.py  serve.py
src/dooservice_agent/templates/: agent.toml  dooservice-agent.service
